Join sql fragments